6041
(comment by florian hars)

If I copy all source files in a single directory and say
```scala
scalac *.java
scalac *.scala
```
it compiles, but if I compile it with one command, I get:
```scala
$$ scalac *.java *.scala
Test.scala:5: error: annotation argument needs to be a constant; found: AnEnum.BAZ
  @AnAnnotation(plain = AnEnum.BAZ)
                               ^
Test.scala:8: error: annotation argument needs to be a constant; found: AClass.E.BAR
  @AnAnnotation(nested = AClass.E.BAR)
                                  ^
Test.scala:11: error: annotation argument needs to be a constant; found: AnotherAnnotation.F.QUUUX
  @AnotherAnnotation(inner = AnotherAnnotation.F.QUUUX)
                                                 ^
three errors found
```

So it is not related to sbt.
